<resources>
    <string name="app_name">MKX-APP</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="button_login">Login</string>
    <string name="signin_button">Singin</string>
    <string name="user_name">Name</string>
    <string name="user_lastName">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="continue_button">Continue</string>
    <string name="cancel_button">Cancel</string>
    <string name="register_user">Register</string>
    <string name="account">Account</string>
    <string name="information">Information</string>
    <string name="adress">Address</string>
    <string name="avatar">Avatar</string>
    <string name="address_street">Street</string>
    <string name="address_number">Number</string>
    <string name="address_zip_code">Zip code</string>
    <string name="address_city">City</string>
    <string name="address_State">State (Select one state)</string>
    <string name="recent">Recent</string>
    <string name="post_by">Post by:</string>
    <string name="car_year">Year</string>
    <string name="car_factory">Factory</string>
    <string name="car_model">Model</string>
    <string name="search_car">Search car</string>
    <string name="new_car">New car</string>
    <string name="post_description">Description</string>
    <string name="post_title">Add a title</string>
    <string name="add_image">Add image</string>
    <string name="add_document">Add document</string>
    <string name="cancel">Cancel</string>
    <string name="publish">Publish</string>
    <string name="comment">Comment</string>
    <string name="image">Image</string>
    <string name="document">Document</string>
    <string name="user_phone">Phone</string>
    <string name="password_requirements">At least, (0-9, Az, @#!?, 8 characters long)</string>
    <string name="Sign_in">btnSignin</string>
    <string-array name="cities">
        <item>Select</item>
        <item>Nuevo León</item>
        <item>Veracruz</item>
        <item>San Luis Potosí</item>
        <item>CDMX</item>
        <item>Chihuahua</item>
        <item>Coahuila</item>
        <item>Baja California</item>
    </string-array>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="search">Find</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="downloads">Downloads</string>
    <string name="post">Post Manual</string>
    <string name="history">History</string>
    <string name="logout">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>