<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single" >
        <item
            android:id="@+id/action_search"
            android:title="@string/search"
            app:showAsAction="always"
            app:actionViewClass="androidx.appcompat.widget.SearchView" />
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_person_24"
            />
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_house_24"/>
        <item
            android:id="@+id/downloads"
            android:title="@string/downloads"
            android:icon="@drawable/ic_arrow_circle_down_24"
            />
        <item
            android:id="@+id/Post"
            android:title="@string/post"
            android:icon="@drawable/ic_add_24"
            />
        <item
            android:id="@+id/History"
            android:title="@string/history"
            android:icon="@drawable/ic_access_time_24"
            />
        <item
            android:id="@+id/Logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_access_time_24"
            />
    </group>
</menu>