<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddressFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAddress"
            style="@style/Theme.MKXAPP.h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/adress" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSigninStreet"
                    style="@style/Theme.MKXAPP.label_with_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_street" />

                <EditText
                    android:id="@+id/editSigninStreet"
                    style="@style/Theme.MKXAPP.edit_with_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/txtSigninNumber"
                    style="@style/Theme.MKXAPP.label_with_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_number" />

                <EditText
                    android:id="@+id/editSigninNumber"
                    style="@style/Theme.MKXAPP.edit_with_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/txtSigninZipCode"
                    style="@style/Theme.MKXAPP.label_with_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_zip_code" />

                <EditText
                    android:id="@+id/editZipCode"
                    style="@style/Theme.MKXAPP.edit_with_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/txtSigninCity"
                    style="@style/Theme.MKXAPP.label_with_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_city" />

                <EditText
                    android:id="@+id/editCity"
                    style="@style/Theme.MKXAPP.edit_with_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/txtSigninState"
                    style="@style/Theme.MKXAPP.label_with_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_State" />

                <Spinner
                    android:id="@+id/sprSigninState"
                    style="@style/Theme.MKXAPP.edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</FrameLayout>