<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InformationFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtAccount"
            style="@style/Theme.MKXAPP.h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/txtSigninName"
            style="@style/Theme.MKXAPP.label_with_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/editSigninName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/Theme.MKXAPP.edit_with_margin"/>

        <TextView
            android:id="@+id/txtSigninLastname"
            style="@style/Theme.MKXAPP.label_with_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_lastName" />

        <EditText
            android:id="@+id/editSigninLatName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/Theme.MKXAPP.edit_with_margin"/>

        <TextView
            android:id="@+id/imgUser"
            style="@style/Theme.MKXAPP.h2"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avatar" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:src="@drawable/ic_image_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/addImage"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Theme.MKXAPP.button"
                android:src="@drawable/ic_arrow_circle_up_24" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Theme.MKXAPP.button"
                android:src="@drawable/ic_add_a_photo_24" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>