<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".SigninFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-2dp">

    <EditText
        android:id="@+id/editEmailRegister"
        style="@style/Theme.MKXAPP.login_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtUserName"
        style="@style/Theme.MKXAPP.login_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegiterUser" />

    <EditText
        android:id="@+id/editUserName"
        style="@style/Theme.MKXAPP.login_edit"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
        app:layout_constraintStart_toStartOf="@+id/txtUserName"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    <TextView
        android:id="@+id/txtUserLastName"
        style="@style/Theme.MKXAPP.login_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_lastName"
        app:layout_constraintEnd_toEndOf="@+id/editUserName"
        app:layout_constraintStart_toStartOf="@+id/editUserName"
        app:layout_constraintTop_toBottomOf="@+id/editUserName" />

    <EditText
        android:id="@+id/editUserLastName"
        style="@style/Theme.MKXAPP.login_edit"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtUserLastName"
        app:layout_constraintStart_toStartOf="@+id/txtUserLastName"
        app:layout_constraintTop_toBottomOf="@+id/txtUserLastName" />

    <TextView
        android:id="@+id/txtPasswordRegister"
        style="@style/Theme.MKXAPP.login_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_password"
        app:layout_constraintEnd_toEndOf="@+id/editEmailRegister"
        app:layout_constraintStart_toStartOf="@+id/editEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/editEmailRegister" />

    <EditText
        android:id="@+id/editPasswordRegister"
        style="@style/Theme.MKXAPP.login_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/txtPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordRegister" />

    <TextView
        android:id="@+id/txtConfirmPassword"
        style="@style/Theme.MKXAPP.login_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/editPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/editPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordRegister" />

    <EditText
        android:id="@+id/editConfrimPassword"
        style="@style/Theme.MKXAPP.login_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/txtConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword" />

    <TextView
        android:id="@+id/txtEmail"
        style="@style/Theme.MKXAPP.login_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_email"
        app:layout_constraintEnd_toEndOf="@+id/editUserLastName"
        app:layout_constraintStart_toStartOf="@+id/editUserLastName"
        app:layout_constraintTop_toBottomOf="@+id/editUserLastName" />

    <TextView
        android:id="@+id/txtRegiterUser"
        style="@style/Theme.MKXAPP.register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/register_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerButtonContaiener"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/editConfrimPassword"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="@+id/editConfrimPassword"
        app:layout_constraintTop_toBottomOf="@+id/editConfrimPassword">

        <Button
            android:id="@+id/btnContinue"
            style="@style/Theme.MKXAPP.ok_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/continue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Theme.MKXAPP.cancel_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>