<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment" >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtAccount"
                style="@style/Theme.MKXAPP.h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/signinTablayout" />

            <TextView
                android:id="@+id/txtSigninEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.MKXAPP.label_with_margin"
                android:text="@string/user_email" />

            <EditText
                android:id="@+id/editSigninEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                style="@style/Theme.MKXAPP.edit_with_margin"/>

            <TextView
                android:id="@+id/txtSigninPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.MKXAPP.label_with_margin"
                android:text="@string/user_password" />

            <EditText
                android:id="@+id/editSigninPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                style="@style/Theme.MKXAPP.edit_with_margin"/>

            <TextView
                android:id="@+id/txtSigninConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.MKXAPP.label_with_margin"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/editConfrimPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                style="@style/Theme.MKXAPP.edit_with_margin"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>